--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ pom.xml.versionsBackup
 pom.xml.next
 pom.xml.bak
 release.properties
+.flattened-pom.xml
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
