--- a/orders-service/src/main/resources/application.properties
+++ b/orders-service/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.appsdeveloperblog.core.*
 
 orders.events.topic.name=orders-events
+products.commands.topic.name=products-commands
