Handle ProductReservedEvent and send ProcessPaymentCommand

--- a/orders-service/src/main/resources/application.properties
+++ b/orders-service/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=com.appsdeveloperb
 
 orders.events.topic.name=orders-events
 products.commands.topic.name=products-commands
+products.events.topic.name=products-events
+payments.commands.topic.name=payments-commands
