Publish Payment Processed and Payment Failed events

--- a/payments-service/src/main/resources/application.properties
+++ b/payments-service/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 remote.ccp.url=http://localhost:8084
 
 payments.commands.topic.name=payments-commands
+payments.events.topic.name=payments-events
