--- a/orders-service/src/main/resources/application.properties
+++ b/orders-service/src/main/resources/application.properties
@@ -20,3 +20,5 @@ orders.events.topic.name=orders-events
 products.commands.topic.name=products-commands
 products.events.topic.name=products-events
 payments.commands.topic.name=payments-commands
+payments.events.topic.name=payments-events
+orders.commands.topic.name=orders-commands
