--- a/credit-card-processor-service/pom.xml
+++ b/credit-card-processor-service/pom.xml
@@ -25,6 +25,12 @@
             <groupId>com.appsdeveloperblog</groupId>
             <artifactId>core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.appsdeveloperblog</groupId>
+            <artifactId>saga-pattern-spring-boot-demo</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
